# chess-model

./: .gitignore  HANGING_FIX_SUMMARY.md
cpp-engine-bot/: requirements.txt  serve.py
cpp-engine-bot/engine/: CMakeLists.txt  build.sh
cpp-engine-bot/engine/src/: bitboard.cpp  bitboard.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  movepick.cpp  movepick.h  nnue.cpp  nnue.h  position.cpp  position.h  search.cpp  search.h  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
cpp-engine-bot/src/: engine_wrapper.py  main.py
cpp-engine-bot/src/utils/: __init__.py  decorator.py
models/: first.pt
move-select-bot/: .gitignore
move-select-bot/src/: main.py  modal_preprocess.py  modal_preprocess_demo.py  modal_train.py
move-select-bot/src/model/: neural_network.py
move-select-bot/src/preprocessing/: encode_move.py  preprocess_data.py
move-select-bot/src/training/: train.py  train_loop.py
my-chesshacks-bot/: .gitignore
my-chesshacks-bot/aadi/: train_chess_eval_model.py
my-chesshacks-bot/src/: main.py
nnue-method/: INTEGRATION_GUIDE.md  NNUE_FILES_LIST.md  NNUE_PORTING_GUIDE.md  PORTED_FILES_SUMMARY.md  fix_includes.sh  port_nnue_files.sh  position_interface_requirements.h
nnue-method/nnue/: network.cpp
nnue_eval/: .gitignore  README.md
nnue_eval/nnue/: README.md
nnue_eval/nnue/inference/: build_wrapper.sh  nnue_wrapper.cpp
nnue_eval/nnue/training/: QUICK_START.md  README.md  README_MODAL.md  check_nnue_arch.py  modal_setup.sh  modal_train.py  serialize.py  test_all_checkpoints.sh  test_modal.sh
nnue_eval/nnue/training/model/: config.py
(+5 files in other folders)
